--- a/registerStyle.css
+++ b/registerStyle.css
@@ -13,7 +13,7 @@ body{
 
 .regbox{
     width: 320px;
-    height: 520px;
+    height: 580px;
     background: #000;
     color: #fff;
     top: 50%;
@@ -55,7 +55,7 @@ h1{
     color: #fff;
 }
 
-.regbox input[type = "text"], input[type="password"]
+.regbox input[type = "text"], input[type="email"] ,input[type="password"]
 {
     border: none;
     border-bottom: 1px solid #fff;
